<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo_example"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/phone_number"
        style="@style/text_20sp_regular_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/green"
        android:hint="@string/hint_phone_number"
        android:inputType="phone"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/cursor_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <EditText
        android:id="@+id/verifier_code"
        style="@style/text_20sp_regular_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/green"
        android:hint="@string/hint_verifier_code"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/cursor_white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number" />

    <TextView
        android:id="@+id/name_of_place"
        style="@style/text_16sp_white_semibold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/indent_20"
        android:layout_marginVertical="@dimen/indent_5"
        android:text="@string/info_about_login"
        app:layout_constraintTop_toBottomOf="@id/verifier_code" />

    <Button
        android:id="@+id/login_btn"
        style="@style/text_24sp_medium_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_btn_with_selector"
        android:gravity="center"
        android:paddingHorizontal="@dimen/indent_10"
        android:text="@string/repeat_send_code"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_of_place" />

</androidx.constraintlayout.widget.ConstraintLayout>