<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/text_24sp_medium_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/indent_20"
            android:layout_marginTop="50dp"
            android:text="@string/info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ru.lisiyytka.bookyourplace.presentation.customView.Field
            android:id="@+id/name_of_place_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_25"
            app:hint="@string/name_of_place"
            app:input_type="text"
            app:label="@string/name_of_place"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <LinearLayout
            android:id="@+id/places_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/indent_20"
            android:layout_marginTop="@dimen/indent_10"
            android:background="@drawable/bg_btn_with_selector"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/indent_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_of_place_field">

            <Spinner
                android:id="@+id/spinner"
                style="@style/text_20sp_regular_white"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:entries="@array/places"
                tools:listitem="@layout/item_spinner_places_type" />
        </LinearLayout>


        <ru.lisiyytka.bookyourplace.presentation.customView.Field
            android:id="@+id/address_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_10"
            app:hint="@string/address"
            app:input_type="text"
            app:label="@string/address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/places_type" />

        <TextView
            android:id="@+id/text1"
            style="@style/text_20sp_regular_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/indent_20"
            android:layout_marginTop="@dimen/indent_10"
            android:text="@string/phone_numbers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_field" />

        <EditText
            android:id="@+id/phones_field"
            style="@style/text_20sp_regular_white"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="@dimen/indent_20"
            android:layout_marginTop="@dimen/indent_10"
            android:background="@drawable/bg_btn_with_selector"
            android:hint="+7 (343) 999-99-99 +7 (343) 999-99-99"
            android:minLines="2"
            android:paddingStart="@dimen/indent_5"
            android:paddingEnd="160dp"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text1" />

        <TextView
            android:id="@+id/text2"
            style="@style/text_20sp_regular_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/indent_20"
            android:layout_marginTop="@dimen/indent_10"
            android:text="@string/schedule"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phones_field" />

        <EditText
            android:id="@+id/schedule_field"
            style="@style/text_20sp_regular_white"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginHorizontal="@dimen/indent_20"
            android:layout_marginTop="@dimen/indent_10"
            android:background="@drawable/bg_btn_with_selector"
            android:hint="пн-чт 12:00–23:00 пт,сб 12:00–00:00 вс 12:00–23:00"
            android:minLines="3"
            android:paddingStart="@dimen/indent_5"
            android:paddingEnd="150dp"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text2" />

        <TextView
            android:id="@+id/text4"
            style="@style/text_20sp_regular_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/indent_20"
            android:layout_marginTop="@dimen/indent_10"
            android:text="@string/schedule"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/schedule_field" />

        <EditText
            android:id="@+id/cuisine_field"
            style="@style/text_20sp_regular_white"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginHorizontal="@dimen/indent_20"
            android:layout_marginTop="@dimen/indent_10"
            android:background="@drawable/bg_btn_with_selector"
            android:hint="Стейки, японская кухня, бургеры"
            android:minLines="3"
            android:paddingStart="@dimen/indent_5"
            android:paddingEnd="150dp"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text4" />

        <ru.lisiyytka.bookyourplace.presentation.customView.Field
            android:id="@+id/average_check_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_10"
            app:hint="@string/average_check"
            app:input_type="text"
            app:label="@string/average_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cuisine_field" />

        <TextView
            android:id="@+id/text3"
            style="@style/text_20sp_regular_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/indent_20"
            android:layout_marginTop="@dimen/indent_10"
            android:text="@string/image_of_place"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/average_check_field" />

        <LinearLayout
            android:id="@+id/img_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/indent_20"
            android:layout_marginTop="@dimen/indent_10"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text3">

            <ImageView
                android:id="@+id/img"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/bg_btn_with_selector"
                android:src="@drawable/ic_image_green" />

            <Button
                android:id="@+id/choose_photo"
                style="@style/text_20sp_regular_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="35dp"
                android:background="@drawable/bg_btn_with_selector"
                android:paddingHorizontal="@dimen/indent_20"
                android:text="@string/choose_image"
                android:textAllCaps="false" />

        </LinearLayout>

        <Button
            android:id="@+id/next"
            style="@style/text_20sp_semibold_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/indent_20"
            android:layout_marginVertical="@dimen/indent_20"
            android:background="@drawable/bg_btn"
            android:text="@string/confirm"
            android:layout_marginBottom="@dimen/indent_10"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_block" />

        <include
            android:id="@+id/include"
            layout="@layout/topbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
